--- a/source/R5T.T0161/R5T.T0161.csproj
+++ b/source/R5T.T0161/R5T.T0161.csproj
@@ -15,5 +15,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\R5T.T0150\source\R5T.T0150\R5T.T0150.csproj" />
     <ProjectReference Include="..\..\..\R5T.T0151\source\R5T.T0151\R5T.T0151.csproj" />
+    <ProjectReference Include="..\..\..\R5T.T0132\source\R5T.T0132\R5T.T0132.csproj" />
   </ItemGroup>
 </Project>
